Sort by priority primarily.